--- a/requirements_freeze.txt
+++ b/requirements_freeze.txt
@@ -2,16 +2,48 @@ aiohttp==3.6.2
 astroid==2.4.2
 async-timeout==3.0.1
 attrs==20.1.0
+backcall==0.2.0
+beautifulsoup4==4.9.1
+casttube==0.2.1
+certifi==2020.6.20
 chardet==3.0.4
+click==7.1.2
 colorama==0.4.3
+decorator==4.4.2
 discord.py==1.4.1
+Flask==1.1.2
+gTTS==2.1.1
+gTTS-token==1.1.3
 idna==2.10
+ifaddr==0.1.7
+ipython==7.18.1
+ipython-genutils==0.2.0
 isort==5.4.2
+itsdangerous==1.1.0
+jedi==0.17.2
+Jinja2==2.11.2
 lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
 mccabe==0.6.1
 multidict==4.7.6
+numpy==1.19.1
+parso==0.7.1
+pickleshare==0.7.5
+prompt-toolkit==3.0.7
+protobuf==3.13.0
+PyChromecast==7.3.0
+Pygments==2.6.1
 pylint==2.6.0
+requests==2.24.0
 six==1.15.0
+soupsieve==2.0.1
 toml==0.10.1
+traitlets==5.0.3
+unicode-slugify==0.1.3
+Unidecode==1.1.1
+urllib3==1.25.10
+wcwidth==0.2.5
+Werkzeug==1.0.1
 wrapt==1.12.1
 yarl==1.5.1
+zeroconf==0.28.4
